objects/BuildCampaignMember__e.object
<CustomObject>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>BuildCampaignMember</label>
    <pluralLabel>BuildCampaignMembers</pluralLabel>
</CustomObject>